--- a/src/styles/editor-block.scss
+++ b/src/styles/editor-block.scss
@@ -46,6 +46,9 @@
 .is-root-container > [data-type^="stackable/"][data-align="wide"] {
 	margin-left: auto;
 	margin-right: auto;
+	> .wp-block[data-align] {
+		width: 100%;
+	}
 }
 // When full alignment, remove the sides.
 .is-root-container > [data-type^="stackable/"][data-align="full"] {
@@ -68,7 +71,7 @@
 
 .editor-styles-wrapper .stk-block-columns .wp-block,
 .editor-styles-wrapper .stk-block-columns .stk-block-column {
-	max-width: inherit;
+	max-width: inherit !important;
 }
 
 // Columns should occupy the entire available area.
@@ -92,14 +95,22 @@
 	// --stk-block-default-width is a Stackable setting
 	// --responsive--aligndefault-width is a Twenty Twenty One setting (possibly for all WP themes)
 	// --stk-block-width-default-detected is from the fallback autodetected value.
-	max-width: var(--stk-block-default-width, var(--responsive--aligndefault-width, var(--stk-block-width-default-detected, 900px)));
+	max-width: var(--stk-block-default-width, var(--responsive--aligndefault-width, var(--stk-block-width-default-detected, 900px))) !important;
 }
-:is(.stk-preview-device-desktop, .stk-preview-device-tablet) .is-root-container > [data-type^="stackable/"][data-align="wide"], // Wide blocks show up as full-width (with blank sides), resize wide blocks correctly.
+// :is(.stk-preview-device-desktop, .stk-preview-device-tablet) .is-root-container > [data-type^="stackable/"][data-align="wide"], // Wide blocks show up as full-width (with blank sides), resize wide blocks correctly.
 :is(.stk-preview-device-desktop, .stk-preview-device-tablet) [data-type^="stackable/"] > .wp-block[data-align] > .stk-block > .stk-inner-blocks.alignwide {
 	// --stk-block-default-width is a Stackable setting
 	// --responsive--aligndefault-width is a Twenty Twenty One setting (possibly for all WP themes)
 	// --stk-block-width-default-detected is from the fallback autodetected value.
-	max-width: var(--stk-block-wide-width, var(--responsive--alignwide-width, var(--stk-block-width-wide-detected, calc(80vw - 280px)))); // Make way for the inspector
+	max-width: var(--stk-block-wide-width, var(--responsive--alignwide-width, var(--stk-block-width-wide-detected, calc(80vw - 280px)))) !important; // Make way for the inspector
+}
+// If the main container is wide and the Content Width is wide too, don't set a max width so it occupies the whole space.
+:is(.stk-preview-device-desktop, .stk-preview-device-tablet) [data-type^="stackable/"] > .wp-block[data-align="wide"] > .stk-block > .stk-inner-blocks.alignwide {
+	max-width: none !important;
+}
+// :is(.stk-preview-device-desktop, .stk-preview-device-tablet) .is-root-container > [data-type^="stackable/"][data-align="full"],
+:is(.stk-preview-device-desktop, .stk-preview-device-tablet) [data-type^="stackable/"] > .wp-block[data-align] > .stk-block > .stk-inner-blocks.alignfull {
+	max-width: none !important;
 }
 
 
